<resources>
    <string name="app_name">calculator</string>
    <string name="zero">0</string>
    <string name="nine">9</string>
    <string name="night">8</string>
    <string name="seven">7</string>
    <string name="zeroo">00</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="eqes">=</string>
    <string name="allclera">ac</string>
    <string name="mul">×</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="n">*</string>
    <string name="x">x</string>
</resources>