<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/top">
  <TextView
      android:id="@+id/maintxt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text=""
      android:textSize="55sp"
      android:layout_above="@+id/result"
      android:textAlignment="textEnd"
      android:textColor="@color/white"/>

  <TextView
      android:id="@+id/result"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@id/numlayout"
      android:layout_marginBottom="20sp"
      android:text=""
      android:textAlignment="textEnd"
      android:textSize="35sp"
      android:textColor="@color/white"/>
<LinearLayout
    android:id="@+id/numlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    android:background="@color/numpad"

    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    android:orientation="horizontal"
      android:gravity="center"

     >
  <Button
      android:id="@+id/ac"
      android:layout_width="75dp"
      android:layout_height="75sp"
      android:background="@drawable/bluebtn"
      android:text="@string/allclera"
      android:textSize="30sp"
      android:layout_margin="10sp"
      android:textColor="@color/white"
      style="?android:attr/buttonBarButtonStyle" />
    <Button
        android:id="@+id/mul"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:background="@drawable/operatorbtn"
        android:text="@string/x"
        android:textSize="30sp"
        android:layout_margin="10sp"
        android:textColor="@color/white"
        style="?android:attr/buttonBarButtonStyle"/>
    <Button
        android:id="@+id/muns"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:background="@drawable/operatorbtn"
        android:text="@string/minus"
        android:textSize="40sp"
        android:layout_margin="10sp"
        android:textColor="@color/white"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/plus"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:layout_margin="10sp"
        android:background="@drawable/operatorbtn"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:textSize="30sp" />



  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center"
      >


    <Button
        android:id="@+id/one"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:layout_margin="10sp"
        android:background="@drawable/custombtn"
        android:text="@string/one"
        android:textColor="@color/white"
        android:textSize="30sp" />
    <Button
        android:id="@+id/two"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:layout_margin="10sp"
        android:background="@drawable/custombtn"
        android:text="@string/two"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/three"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:layout_margin="10sp"
        android:background="@drawable/custombtn"
        android:text="@string/three"
        android:textColor="@color/white"
        android:textSize="30sp" />
    <Button
        android:id="@+id/zeroo"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:layout_margin="10sp"
        android:background="@drawable/custombtn"
        android:text="@string/zeroo"
        android:textColor="@color/white"
        android:textSize="30sp" />



  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center"

      >


    <Button
        android:id="@+id/four"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:layout_margin="10sp"
        android:background="@drawable/custombtn"
        android:text="@string/four"
        android:textColor="@color/white"
        android:textSize="30sp" />
    <Button
        android:id="@+id/five"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:layout_margin="10sp"
        android:background="@drawable/custombtn"
        android:text="@string/five"
        android:textColor="@color/white"
        android:textSize="30sp" />


    <Button
        android:id="@+id/six"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:layout_margin="10sp"
        android:background="@drawable/custombtn"
        android:text="@string/six"
        android:textColor="@color/white"
        android:textSize="30sp" />
    <Button
        android:id="@+id/zero"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:layout_margin="10sp"
        android:background="@drawable/custombtn"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="30sp" />



  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center"

      >

    <Button
        android:id="@+id/seven"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:layout_margin="10sp"
        android:background="@drawable/custombtn"
        android:text="@string/seven"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/eight"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:layout_margin="10sp"
        android:background="@drawable/custombtn"
        android:text="@string/night"
        android:textColor="@color/white"
        android:textSize="30sp" />


    <Button
        android:id="@+id/nine"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:layout_margin="10sp"
        android:background="@drawable/custombtn"
        android:text="@string/nine"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/eqs"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="75dp"
        android:layout_height="75sp"
        android:layout_margin="10sp"
        android:background="@drawable/redbtn"
        android:text="@string/eqes"
        android:textColor="@color/white"
        android:textSize="30sp"
        />



  </LinearLayout>

</LinearLayout>



</RelativeLayout>
</layout>